fixed scrollbar and optimazed imports

--- a/frontend/apps/salvatoreemilio.it/src/styles.scss
+++ b/frontend/apps/salvatoreemilio.it/src/styles.scss
@@ -7,7 +7,7 @@ html {
 body {
   height: 100%;
   overflow: hidden;
-  overflow-y: auto;
+  overflow-y: overlay;
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   color: #0d0d0d;
